samples/_failures_safe/1761669905_5ac8d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_91c096ba.c:150: error: expected ‘;’, ‘,’ or ‘)’ at end of input
